matlab python workspace comparisons

--- a/matlab/matlab_examples.ipynb
+++ b/matlab/matlab_examples.ipynb
@@ -4,18 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python"
+    "# Matlab"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello World!\")"
+    "disp(\"Hello World!\")"
    ]
   },
   {
@@ -31,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is a comment\n",
-    "\"\"\"\n",
-    "this is a long comment\n",
-    "\"\"\""
+    "% this is a comment\n",
+    "%{ matlab 7 long comments don't work in \n",
+    "% this environment but look like this with no\n",
+    "%leading % }%"
    ]
   },
   {
@@ -50,13 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # matrix math library\n",
-    "import scipy.special as sp # scientific computing\n",
-    "x = 5.71\n",
-    "A = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
-    "arr = np.array(A)\n",
-    "I = sp.iv(x, A)\n",
-    "print(x,A,arr,I, sep='\\n')"
+    "x = 5.71;\n",
+    "A = [ 1 2 3; 4 5 6; 7 8 9];\n",
+    "I = besseli(x, A);\n",
+    "x, A, I"
    ]
   },
   {
@@ -72,8 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.pi * np.ones(3)\n",
-    "txt = \"{:f} | {:.2f} | {:12f}\".format(*A)\n",
+    "\n",
+    "A = pi*ones(1, 3);\n",
+    "txt = sprintf('%f | %.2f | %12f', A);\n",
     "txt"
    ]
   },
@@ -90,15 +86,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"Enter info: \"\n",
-    "str_inpit = input(prompt)"
+    "prompt = \"Enter info: \";\n",
+    "x = input(prompt)\n",
+    "str_input = input(prompt, \"s\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Control Logic: If Statement**"
+    "** Control Logic: If Statement**"
    ]
   },
   {
@@ -107,13 +104,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 3\n",
-    "if x > 5:\n",
-    "    y = 2\n",
-    "elif x < 0:\n",
-    "    y = 8\n",
-    "else:\n",
-    "    y = 24"
+    "x = 3;\n",
+    "if x>5\n",
+    "    y = 2;\n",
+    "elseif x<0\n",
+    "    y = 8;\n",
+    "else\n",
+    "    y = 24;\n",
+    "end"
    ]
   },
   {
@@ -138,9 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.ones(10)\n",
-    "for n in range(2,7):\n",
-    "    x[n] = 2 * x[n-1]"
+    "x = ones(1,10);\n",
+    "for n = 2:6\n",
+    "    x(n) = 2 * x(n-1);\n",
+    "end"
    ]
   },
   {
@@ -165,11 +164,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1\n",
-    "nFactorial = 1\n",
-    "while nFactorial < 1e100:\n",
-    "    n+=1\n",
-    "    nFactorial*=n"
+    "n = 1;\n",
+    "nFactorial = 1;\n",
+    "while nFactorial < 1e100\n",
+    "    n = n+1;\n",
+    "    nFactorial = nFactorial*n;\n",
+    "end"
    ]
   },
   {
@@ -178,8 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#python 3.6+ string formatting\n",
-    "f'{nFactorial:e}'"
+    "nFactorial"
    ]
   },
   {
@@ -195,9 +194,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fact(n):\n",
-    "    f = np.prod(np.arange(1, n+1))\n",
-    "    return f"
+    "function f = fact(n)\n",
+    "    f = prod(1:n);\n",
+    "end"
    ]
   },
   {
@@ -213,81 +212,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Classes**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
+    "**Classes**\n",
     "\n",
-    "class Circle(object):\n",
-    "    def __init__(self, rad):\n",
-    "        if rad > 0:\n",
-    "            self.radius = rad;\n",
-    "        else:\n",
-    "            raise ValueError(\"Value must be positive\")\n",
-    "    \n",
-    "    def area(self):\n",
-    "            return np.pi*self.radius**2\n",
-    "        \n",
-    "    def plotC(self, color):\n",
-    "        theta = np.linspace(-2*np.pi, 2*np.pi, 100)\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.plot(r*np.cos(theta), \n",
-    "                r*np.sin(theta), color=color)\n",
-    "        ax.set_aspect('equal')\n",
-    "        fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = Circle(2)\n",
-    "c.radius"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.radius = 3\n",
-    "c.radius"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.area()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "c.plotC('green')"
+    "note: not implemented in octave"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Talk to Matlab:\n",
-    "https://www.mathworks.com/help/matlab/matlab-engine-for-python.html"
+    "```octave\n",
+    "classdef Circle\n",
+    "    properties\n",
+    "        radius\n",
+    "    end\n",
+    "    methods\n",
+    "        function obj = Circle(rad)\n",
+    "            if rad > 0\n",
+    "                obj.radius = rad;\n",
+    "            else\n",
+    "                error(\"Value must be positive.\")\n",
+    "            end\n",
+    "        end\n",
+    "        function a = area(obj)\n",
+    "            a = pi*[obj.radius]^2;\n",
+    "        end\n",
+    "        function plot(obj, color)\n",
+    "            theta = linspace(-2*pi,2*pi, 100);\n",
+    "            plotC(obj.radius*cos(theta), \n",
+    "                 obj.radius*sin(theta), color=color)\n",
+    "            axis equal\n",
+    "            show()\n",
+    "        end \n",
+    "    end\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```octave\n",
+    "c = Circle(2)\n",
+    "area(c)\n",
+    "c.area()\n",
+    "plotC(c, 'green')\n",
+    "c.plotC('green')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Talk to Python:\n",
+    "https://www.mathworks.com/help/matlab/call-python-libraries.html"
    ]
   },
   {
@@ -307,23 +286,30 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:py3]",
-   "language": "python",
-   "name": "conda-env-py3-py"
+   "display_name": "Octave",
+   "language": "octave",
+   "name": "octave"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "file_extension": ".m",
+   "help_links": [
+    {
+     "text": "GNU Octave",
+     "url": "https://www.gnu.org/software/octave/support.html"
+    },
+    {
+     "text": "Octave Kernel",
+     "url": "https://github.com/Calysto/octave_kernel"
+    },
+    {
+     "text": "MetaKernel Magics",
+     "url": "https://github.com/calysto/metakernel/blob/master/metakernel/magics/README.md"
+    }
+   ],
+   "mimetype": "text/x-octave",
+   "name": "octave",
+   "version": "4.0.3"
   }
  },
  "nbformat": 4,
