--- a/matlab/matlab_examples.ipynb
+++ b/matlab/matlab_examples.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "disp(\"Hello World!\")"
    ]
@@ -25,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "% this is a comment\n",
     "%{ matlab 7 long comments don't work in \n",
     "% this environment but look like this with no\n",
-    "%leading % }%"
+    "% leading % }%"
    ]
   },
   {
@@ -44,14 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  5.7100\n",
+      "A =\n",
+      "\n",
+      "   1   2   3\n",
+      "   4   5   6\n",
+      "   7   8   9\n",
+      "\n",
+      "I =\n",
+      "\n",
+      "   4.7092e-05   2.7530e-03   3.3403e-02\n",
+      "   2.2094e-01   1.0739e+00   4.3668e+00\n",
+      "   1.5877e+01   5.3598e+01   1.7191e+02\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 5.71;\n",
-    "A = [ 1 2 3; 4 5 6; 7 8 9];\n",
-    "I = besseli(x, A);\n",
-    "x, A, I"
+    "x = 5.71\n",
+    "A = [ 1 2 3; 4 5 6; 7 8 9]\n",
+    "I = besseli(x, A)\n",
+    "%x, A, I"
    ]
   },
   {
@@ -63,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "txt = 3.141593 | 3.14 |     3.141593\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "A = pi*ones(1, 3);\n",
@@ -106,9 +142,26 @@
    "source": [
     "x = 3;\n",
     "if x>5\n",
-    "    y = 2;\n",
+    "    y = 2\n",
     "elseif x<0\n",
-    "    y = 8;\n",
+    "    y = 8\n",
+    "else\n",
+    "    y = 24\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 7;\n",
+    "if x>5\n",
+    "    y = 2;\n",
+    "    if x<10\n",
+    "        y = 8;\n",
+    "    end\n",
     "else\n",
     "    y = 24;\n",
     "end"
@@ -120,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x"
+    "y"
    ]
   },
   {
@@ -148,6 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = 2:6\n",
+    "n(3)\n",
     "x"
    ]
   },
@@ -209,6 +264,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function [a, b] = add2(x, y)\n",
+    "    a = x + 2;\n",
+    "    b = y + 2;\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[c, d] = add2(4, 5)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,9 +313,9 @@
     "        function a = area(obj)\n",
     "            a = pi*[obj.radius]^2;\n",
     "        end\n",
-    "        function plot(obj, color)\n",
+    "        function plotC(obj, color)\n",
     "            theta = linspace(-2*pi,2*pi, 100);\n",
-    "            plotC(obj.radius*cos(theta), \n",
+    "            plot(obj.radius*cos(theta), \n",
     "                 obj.radius*sin(theta), color=color)\n",
     "            axis equal\n",
     "            show()\n",
@@ -282,7 +358,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ds = \"../data/land_cover.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds"
+   ]
   }
  ],
  "metadata": {
