--- a/matlab/python_examples.ipynb
+++ b/matlab/python_examples.ipynb
@@ -9,11 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\")"
    ]
@@ -27,9 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nthis is a long comment\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# this is a comment\n",
     "\"\"\"\n",
@@ -46,9 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.71\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[4.70923380e-05 2.75296904e-03 3.34028974e-02]\n",
+      " [2.20939866e-01 1.07390066e+00 4.36678176e+00]\n",
+      " [1.58766383e+01 5.35980546e+01 1.71905963e+02]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # matrix math library\n",
     "import scipy.special as sp # scientific computing\n",
@@ -68,13 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141593 | 3.14 |     3.141593\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.pi * np.ones(3)\n",
     "txt = \"{:f} | {:.2f} | {:12f}\".format(*A)\n",
-    "txt"
+    "print(txt)"
    ]
   },
   {
@@ -91,7 +133,8 @@
    "outputs": [],
    "source": [
     "prompt = \"Enter info: \"\n",
-    "str_inpit = input(prompt)"
+    "str_input = input(prompt)\n",
+    "print(str_input)"
    ]
   },
   {
@@ -122,7 +165,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x"
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 7\n",
+    "if x>5:\n",
+    "    y = 2\n",
+    "    if x<10:\n",
+    "        y = 8\n",
+    "else:\n",
+    "    y = 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
    ]
   },
   {
@@ -149,6 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = range(2,7)\n",
+    "print(list(n))\n",
+    "n[3]\n",
     "x"
    ]
   },
@@ -196,7 +266,7 @@
    "outputs": [],
    "source": [
     "def fact(n):\n",
-    "    f = np.prod(np.arange(1, n+1))\n",
+    "    f = np.prod(range(1, n+1))\n",
     "    return f"
    ]
   },
@@ -207,6 +277,28 @@
    "outputs": [],
    "source": [
     "fact(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add2(x, y):\n",
+    "    a = x + 2;\n",
+    "    b = y + 2;\n",
+    "    return a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c, d = add2(4, 5)\n",
+    "c, d"
    ]
   },
   {
@@ -237,8 +329,8 @@
     "    def plotC(self, color):\n",
     "        theta = np.linspace(-2*np.pi, 2*np.pi, 100)\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(r*np.cos(theta), \n",
-    "                r*np.sin(theta), color=color)\n",
+    "        ax.plot(self.radius*np.cos(theta), \n",
+    "                self.radius*np.sin(theta), color=color)\n",
     "        ax.set_aspect('equal')\n",
     "        fig.show()"
    ]
@@ -296,6 +388,76 @@
    "source": [
     "# Translate lots of code\n",
     "https://docs.scipy.org/doc/numpy/user/numpy-for-matlab-users.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples/Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading a file into a datastructure (data frame)\n",
+    "import pandas as pd\n",
+    "ds = pd.read_csv(\"../data/land_cover.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating a matrix\n",
+    "A = np.random.randint(-5, 6, 25).reshape((5,5))\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting a matrix\n",
+    "plt.imshow(A, cmap='coolwarm')\n",
+    "plt.title(\"Random\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternatively using object oriented\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(A, cmap='coolwarm')\n",
+    "ax.set_title(\"Random\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%whos"
    ]
   },
   {
