updated to constrained layout

--- a/2018/july17a.ipynb
+++ b/2018/july17a.ipynb
@@ -115,25 +115,23 @@
     "import matplotlib.pyplot as plt\n",
     "import cmocean\n",
     "\n",
-    "fig,(ax1, ax2, ax3) = plt.subplots(ncols=3, figsize=(10,30))\n",
+    "fig,(ax1, ax2, ax3) = plt.subplots(ncols=3, figsize=(30,10), constrained_layout=True)\n",
     "\n",
     "nim = ax1.imshow(nir, vmin=0)\n",
     "#fraction shrinks the colorbar so that it fits nicely\n",
-    "fig.colorbar(nim, ax=ax1, fraction=.04)\n",
-    "ax1.set_title(\"Near Infrared\")\n",
+    "_ = fig.colorbar(nim, ax=ax1, shrink=.72, aspect=35)\n",
+    "_ = ax1.set_title(\"Near Infrared\")\n",
     "\n",
     "rim = ax2.imshow(red, cmap=\"Reds\", vmin=0)\n",
-    "fig.colorbar(rim, ax=ax2, fraction=.04)\n",
-    "ax2.set_title(\"Red channel\")\n",
+    "_ = fig.colorbar(rim, ax=ax2, shrink=.72, aspect=35)\n",
+    "_ = ax2.set_title(\"Red channel\")\n",
     "\n",
     "ndim = ax3.imshow(ndvi, vmin=-1, vmax=1, cmap=cmocean.cm.delta)\n",
     "# alternative if you don't have cmocean installed:\n",
     "#import matplotlib.colors as mcolors\n",
     "#ndim = ax3.imshow(ndvi, vmin=-1, vmax=1, cmap=mcolors.ListedColormap(['DarkBlue','DarkGreen']))\n",
-    "fig.colorbar(ndim, ax=ax3, fraction=.04)\n",
-    "ax3.set_title(\"NDVI\")\n",
-    "\n",
-    "fig.tight_layout()"
+    "_ = fig.colorbar(ndim, ax=ax3, shrink=.72, aspect=35)\n",
+    "_ = ax3.set_title(\"NDVI\")\n"
    ]
   },
   {
