removed fake data url

--- a/bootcamp/BasicStatsPython.ipynb
+++ b/bootcamp/BasicStatsPython.ipynb
@@ -22,20 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://kanoki.org/2018/12/25/read-google-spreadsheet-data-into-pandas-dataframe/\n",
     "url = \"https://docs.google.com/spreadsheets/d/1liJc0zDH5y5Aa02TnmfCvIG08pEQlv7rbi9aSswEuP0/export?format=csv&gid=577241993\"\n",
-    "url = 'fake_survey.csv' # fake dataset just in case the survey doesn't happen"
+    "fakedata = \"https://raw.githubusercontent.com/story645/EAS213/master/bootcamp/fake_survey.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://docs.google.com/spreadsheets/d/1liJc0zDH5y5Aa02TnmfCvIG08pEQlv7rbi9aSswEuP0/export?format=csv&gid=577241993'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# lets print the value stored in our variable (click on it!)\n",
     "url"
