moved a url down

--- a/bootcamp/BasicStatsPython.ipynb
+++ b/bootcamp/BasicStatsPython.ipynb
@@ -27,8 +27,8 @@
    "outputs": [],
    "source": [
     "# https://kanoki.org/2018/12/25/read-google-spreadsheet-data-into-pandas-dataframe/\n",
-    "url = \"https://docs.google.com/spreadsheets/d/1liJc0zDH5y5Aa02TnmfCvIG08pEQlv7rbi9aSswEuP0/export?format=csv&gid=577241993\"\n",
-    "fakedata = \"https://raw.githubusercontent.com/story645/EAS213/master/bootcamp/fake_survey.csv\""
+    "# fakedata = \"https://raw.githubusercontent.com/story645/EAS213/master/bootcamp/fake_survey.csv\"\n",
+    "url = \"https://docs.google.com/spreadsheets/d/1liJc0zDH5y5Aa02TnmfCvIG08pEQlv7rbi9aSswEuP0/export?format=csv&gid=577241993\""
    ]
   },
   {
